--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>For You</title>
+  <title>Happy New Year</title>
 
   <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
@@ -32,6 +32,9 @@
       Duniya se bhi chupta nahin<br>
       Yeh jaane kaisa raaz hai<br>
 
+    </p>
+    <p id="delayed" class="delayed">
+      Happy New Year...
     </p>
     <p class="line">I'm sorry again</p>
   </div>
